--- a/form.html
+++ b/form.html
@@ -170,6 +170,23 @@
     <h1 id="1"></h1>
 
     <script>
+
+        function employeeEmailRequired(employeeEmailFieldId){
+            let emailInput =  document.getElementById(employeeEmailFieldId)
+
+            if (emailInput.hasAttribute("required")) {
+                // Remove the 'required' attribute
+                emailInput.removeAttribute("required");
+                console.log("The field is no longer required.");
+            } else {
+                // Add the 'required' attribute
+                emailInput.setAttribute("required", "");
+                console.log("The field is now required.");
+            }
+
+        }
+
+
         document.addEventListener('DOMContentLoaded', function() {
 
             const employeesContainer = document.getElementById('employees-container');
@@ -205,7 +222,7 @@
                             <label for="employee${i}Department" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Department:</label>
                         </div>
                         <div class="flex items-center m-4">
-                            <input id="employee${i}IsManager" name="employee${i}IsManager" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                            <input  onclick="employeeEmailRequired('employee${i}Email')" id="employee${i}IsManager" name="employee${i}IsManager" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                             <label for="employee${i}IsManager" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is Manager?</label>
                         </div>
                         <hr>
