--- a/form.html
+++ b/form.html
@@ -121,7 +121,7 @@
         <h5 class="text-xl dark:text-white text-center p-3">Employee Information</h5>
         <div style="margin: auto; width: 200px;" class="mb-5 items-center mx-auto flex" >
             <p class="mt-2 text-sm text-gray-500 dark:text-gray-400 text-center"><i>Number of Employees:</i> </p>
-            <input   type="number" id="numberOfEmployees" name="numberOfEmployees" min="1" value="1" max="25" class="my-5 max-w-sm  border border-gray-300 rounded-md items-center m-auto" value="" required>
+            <input   type="number" id="numberOfEmployees" name="numberOfEmployees" min="1" value="1" max="80" class="my-5 max-w-sm  border border-gray-300 rounded-md items-center m-auto" value="" required>
             
         </div>
         <p class="text-sm text-gray-500 dark:text-gray-400 text-center my-5"><i>(Remember to include the main contact so they have a personal login)</i> </p>
@@ -205,21 +205,21 @@
                         <p class="m-4 text-center text-xs text-gray-500 dark:text-gray-400  pb-4"><i>Employee ${i}</i> </p>
 
                         <div class="relative my-1" style="margin:10px">
-                            <input placeholder=" " type="text" id="employee${i}Name" name="employee${i}Name" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="" required>
+                            <input value="" placeholder=" " type="text" id="employee${i}Name" name="employee${i}Name" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" required>
                             <label for="employee${i}Name" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Display Name:</label>
                         </div>
 
                         <div class="relative my-1" style="margin:10px">
-                            <input placeholder=" " type="text" id="employee${i}LoginName" name="employee${i}LoginName" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="" required>
+                            <input value="" placeholder=" " type="text" id="employee${i}LoginName" name="employee${i}LoginName" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" required>
                             <label for="employee${i}LoginName" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Login Name:</label>
                         </div>
 
                         <div class="relative my-1" style="margin:10px">
-                            <input placeholder=" " type="email" id="employee${i}Email" name="employee${i}Email" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="">
+                            <input value="" placeholder=" " type="email" id="employee${i}Email" name="employee${i}Email" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer">
                             <label for="employee${i}Email" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Email:</label>
                         </div>
                         <div class="relative my-1" style="margin:10px">
-                            <input placeholder=" " type="text" id="employee${i}Department" name="employee${i}Department" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" value="" required>
+                            <input value="" placeholder=" " type="text" id="employee${i}Department" name="employee${i}Department" class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-gray-900 bg-transparent rounded-lg border-1 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" required>
                             <label for="employee${i}Department" class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white dark:bg-gray-900 px-2 peer-focus:px-2 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1">Department:</label>
                         </div>
                         <div class="flex items-center m-4">
